--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^5.3.6",
     "@reduxjs/toolkit": "^2.2.3",
+    "@types/node": "^20.12.4",
     "antd": "^5.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
