--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.2",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@types/redux-persist": "^4.3.1",
