--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@testing-library/react": "^14.2.2",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.2.74",
+    "@types/react-dom": "^18.2.24",
+    "@types/react-redux": "^7.1.33",
     "@types/redux-persist": "^4.3.1",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
@@ -30,7 +30,10 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "jest-environment-jsdom": "^29.7.0",
+    "jsdom": "^24.0.0",
     "sass": "^1.74.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
   }
